# lawyer-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  file-list.txt  important-files.txt  push-github-guide.sh  push-with-token.sh
backend/: .env.example  .gitignore  DEVELOPMENT.md  README.md  lawyer-ai-ai.code-workspace  pom.xml  pyproject.toml  settings.xml
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: 100d58d44e45_init_all_tables_with_pgvector.py  a3e1f7b2c9d4_add_document_tables.py  b457588c6b0a_add_cases_tables.py  c95ed3d9d382_change_embedding_dim_to_2048.py  d5f2a8e3b1c6_add_favorites_table.py  e7a3b1c2d4f5_add_trial_tables.py  f1b2c3d4e5a6_add_chat_enhancement_columns.py
backend/app/: main.py
backend/app/ai/: __init__.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  dependencies.py  redis.py  security.py
backend/lawyer-api/: pom.xml  pytest.ini
backend/lawyer-common/: pom.xml
backend/lawyer-service/: pom.xml
backend/scripts/: seed_laws.py  vectorize_laws.py
backend/tests/: conftest.py  test_ai_agents.py  test_auth.py  test_calculator.py  test_case_api.py  test_case_service.py  test_consultation_enhance.py  test_consultation_extra.py  test_document_api.py  test_document_enhance.py  test_document_extra.py  test_document_service.py  test_embed_calculation.py  test_export.py  test_favorites.py  test_feedback.py  test_gantt.py  test_gantt_extra.py  test_reports.py  test_reports_extra.py  test_schemas.py  test_storage_service.py  test_trial.py  test_trial_extra.py
(+364 files in other folders)
